--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
-  "extends": "@repo/typescript-config/base.json",
-
   "compilerOptions": {
-    "target": "es2021",
+    "target": "ES2022",
+    "lib": ["ES2022"],
     "module": "esnext",
-    "lib": ["es2021"],
-    "declaration": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": false,
     "moduleResolution": "node",
+    "strict": false,
+
+    "outDir": "dist",
+    "rootDir": "src",
+
     "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
-  "exclude": ["dist", "node_modules", "tests", "vitest.config.ts"]
+  "include": ["src"]
 }
+
