Scaffolded out a notification job

--- a/config/config.json
+++ b/config/config.json
@@ -50,6 +50,9 @@
       "log": false,
       "runOnce": false,
       "initialDelaySecs": 0
+    },
+    "eventNotification": {
+      "reminderTimesInMins": [30, 720]
     }
   },
   "rateLimiting": {
