--- a/config/config.json
+++ b/config/config.json
@@ -4,10 +4,12 @@
     "// NOTE: id and token are now managed via environment variables": "",
     "intents": [
       "Guilds",
+      "GuildMembers",
       "GuildMessages",
       "GuildMessageReactions",
       "DirectMessages",
-      "DirectMessageReactions"
+      "DirectMessageReactions",
+      "MessageContent"
     ],
     "partials": ["Message", "Channel", "Reaction"],
     "caches": {
@@ -50,6 +52,12 @@
       "log": false,
       "runOnce": false,
       "initialDelaySecs": 0
+    },
+    "autoCloseWelcomeThreads": {
+      "schedule": "0 0 * * * *",
+      "log": true,
+      "runOnce": false,
+      "initialDelaySecs": 120
     }
   },
   "rateLimiting": {
@@ -75,5 +83,25 @@
     "rateLimit": {
       "minTimeout": 30
     }
+  },
+  "onboarding": {
+    "delaySeconds": 7
+  },
+  "welcomeThread": {
+    "channelName": "entrance",
+    "welcomeTeamRoleName": "Welcome Team",
+    "modRoleName": "Moderator",
+    "directorRoleName": "Director",
+    "maxActiveThreads": 50,
+    "inactivityDays": 5,
+    "welcomeMessage": "Welcome! This is a brief summary of our server. Someone from the Welcome Team will introduce themselves and help you get started. Feel free to say hello here."
+  },
+  "teams": {
+    "Dev Team": { "interestRoleName": "Interest in Dev Team" },
+    "Events Team": { "interestRoleName": "Interest in Events Team" },
+    "Media Team": { "interestRoleName": "Interest in Media Team" },
+    "Recruitment Team": { "interestRoleName": "Interest in Recruitment Team" },
+    "Research Team": { "interestRoleName": "Interest in Research Team" },
+    "Moderator": { "interestRoleName": "Interest in Moderation" }
   }
 }
