--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "copyconfig": "cp config/debug.example.json config/debug.json && cp config/bot-sites.example.json config/bot-sites.json  && cp .env.example .env"
   },
   "dependencies": {
     "@discordjs/rest": "^2.5.1",
