--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "clean": "git clean -xdf --exclude=\"/config/**/*\"",
     "clean:dry": "git clean -xdf --exclude=\"/config/**/*\" --dry-run",
     "build": "tsc --project tsconfig.json",
-    "commands:view": "pnpm run build && node --enable-source-maps dist/start-bot.js commands view",
-    "commands:register": "pnpm run build && node --enable-source-maps dist/start-bot.js commands register",
-    "commands:rename": "pnpm run build && node --enable-source-maps dist/start-bot.js commands rename",
-    "commands:delete": "pnpm run build && node --enable-source-maps dist/start-bot.js commands delete",
-    "commands:clear": "pnpm run build && node --enable-source-maps dist/start-bot.js commands clear",
-    "start": "pnpm run start:bot",
-    "start:bot": "pnpm run build && node --enable-source-maps dist/start-bot.js",
-    "start:manager": "pnpm run build && node --enable-source-maps dist/start-manager.js",
-    "start:pm2": "pnpm run build && pnpm run pm2:start",
+    "commands:view": "npm run build && node --enable-source-maps dist/start-bot.js commands view",
+    "commands:register": "npm run build && node --enable-source-maps dist/start-bot.js commands register",
+    "commands:rename": "npm run build && node --enable-source-maps dist/start-bot.js commands rename",
+    "commands:delete": "npm run build && node --enable-source-maps dist/start-bot.js commands delete",
+    "commands:clear": "npm run build && node --enable-source-maps dist/start-bot.js commands clear",
+    "start": "npm run start:bot",
+    "start:bot": "npm run build && node --enable-source-maps dist/start-bot.js",
+    "start:manager": "npm run build && node --enable-source-maps dist/start-manager.js",
+    "start:pm2": "npm run build && npm run pm2:start",
     "pm2:start": "pm2 start process.json",
     "pm2:stop": "pm2 stop process.json",
     "pm2:delete": "pm2 delete process.json",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "copyconfig": "cp config/debug.example.json config/debug.json && cp config/bot-sites.example.json config/bot-sites.json  && cp .env.example .env"
   },
   "dependencies": {
     "@discordjs/rest": "^2.5.1",
