--- a/config/config.json
+++ b/config/config.json
@@ -103,5 +103,27 @@
     "Recruitment Team": { "interestRoleName": "Interest in Recruitment Team" },
     "Research Team": { "interestRoleName": "Interest in Research Team" },
     "Moderator": { "interestRoleName": "Interest in Moderation" }
+  },
+  "roles": {
+    "COORDINATOR": {
+      "id": "1347653968641134683",
+      "name": "Coordinator"
+    },
+    "TEAM_LEAD": {
+      "id": "1385639570007396524",
+      "name": "Team Lead"
+    },
+    "ORGANIZER": {
+      "id": "1356880811156307988",
+      "name": "Organizer"
+    },
+    "DIRECTOR": {
+      "id": "1356880586916102197",
+      "name": "Director"
+    },
+    "ADMIN": {
+      "id": "1347656064900005970",
+      "name": "Admin"
+    }
   }
 }
